[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"
authors = ["INHELD <avaisadorb@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A powerful synthesizer that gives you full control over every possible parameter."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
